--- a/TechnologiesAPI/TechnologiesAPI/TechnologiesAPI.csproj
+++ b/TechnologiesAPI/TechnologiesAPI/TechnologiesAPI.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
