--- a/TechnologiesAPI/BotTG/BotTG.csproj
+++ b/TechnologiesAPI/BotTG/BotTG.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Telegram.Bot" Version="22.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
+  </ItemGroup>
+
 </Project>
