--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,6 +34,10 @@ jobs:
       with:
         dotnet-version: 9.0.x
 
-    # Execute all unit tests in the solution
+    # Navigate to solution
+    - name: Navigate to solution
+      run: cd TechnologiesAPI
+
+    # Build solution
     - name: Build solution
       run: dotnet build
