--- a/TechnologiesAPI/TechnologiesAPI/appsettings.json
+++ b/TechnologiesAPI/TechnologiesAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=WIN-57GSVVQFVLA;Initial Catalog=MyBotDB;Integrated Security=True;Pooling=True;Encrypt=False;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
