--- a/WebTests/appsettings.json
+++ b/WebTests/appsettings.json
@@ -1,10 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=WIN-57GSVVQFVLA;Initial Catalog=WebTests;Integrated Security=True;TrustServerCertificate=True"
+  },
+
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
