add backend auth

--- a/WebTests/appsettings.json
+++ b/WebTests/appsettings.json
@@ -3,6 +3,13 @@
     "DefaultConnection": "Data Source=WIN-57GSVVQFVLA;Initial Catalog=WebTests;Integrated Security=True;TrustServerCertificate=True"
   },
 
+  "Jwt": {
+    "Key": "S2MK7F9EO9CWEK5HLON9VTZ2HRX3P2X7",
+    "Issuer": "TestPlatform",
+    "Audience": "TestPlatformUsers",
+    "DurationInMinutes": 120
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
