--- a/WebTests/ClientApp/package.json
+++ b/WebTests/ClientApp/package.json
@@ -29,6 +29,7 @@
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.8.1",
+    "tailwind": "^4.0.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.13.0"
   },
@@ -39,16 +40,16 @@
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.16.3",
+    "autoprefixer": "^10.4.22",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~4.9.5"
   },
-  "overrides": {
-    "autoprefixer": "10.4.5",
-    "webpack": "5.81.0"
-  }
+  "overrides": {}
 }
