--- a/WebTests/ClientApp/package.json
+++ b/WebTests/ClientApp/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "^15.2.7",
     "@angular/compiler-cli": "^15.2.8",
+    "@angular/localize": "^15.2.10",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.16.3",
