add sub with username in nav-menu
and add localize, add results-page, fixed method passed tests

--- a/WebTests/ClientApp/angular.json
+++ b/WebTests/ClientApp/angular.json
@@ -4,6 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "WebTests": {
+      "i18n": {"sourceLocale": "ru"},
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
